--- a/requirements.txt
+++ b/requirements.txt
@@ -57,3 +57,11 @@ urllib3==2.4.0
 webcolors==24.6.0
 Werkzeug==3.1.3
 xyzservices==2025.4.0
+Flask>=2.3
+gunicorn>=20.1
+setuptools>=68.0.0
+wheel>=0.40.0
+joblib
+pandas
+numpy
+scikit-learn
