--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ joblib==1.4.2
 kiwisolver==1.4.5
 MarkupSafe==3.0.2
 matplotlib==3.9.1
-matplotlip==0.2
+matplotlip
 mysql-connector-python==9.0.0
 networkx==3.3
 nltk==3.9.1
